--- a/css/styles.css
+++ b/css/styles.css
@@ -84,6 +84,7 @@ header h1 {
 .newGameBtn {
   visibility: hidden;
   margin-top: 1%;
+  margin-right: 2%;
 }
 
 /****************************FOOTER SECTION *******************************************/
